--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,9 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+             "src/favicon.ico",
+             "src/assets"
             ],
             "styles": [
               "src/styles.css"
@@ -81,5 +83,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
